# CANFDAPI

./: CMakeLists.txt  README.md
cmake/: Dependicies.cmake  Install.cmake  Set.cmake
compilation/: builder.sh  installer.sh
include/: CAN.h  CANFD.h
include/private_include/: CANFD.h
include/public_include/: CAN.h
src/: CANFD.cpp
test/: CMakeLists.txt  test.cpp
